--- a/Pol_Guymarc_Projet/GoingEvening.axaml
+++ b/Pol_Guymarc_Projet/GoingEvening.axaml
@@ -35,7 +35,7 @@
     </Window.Styles>
 
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-        <StackPanel Name="MainPanel" Margin="20" Spacing="20">
+        <StackPanel Name="MainPanel" Margin="50,20,20,0" Spacing="20">
             <TextBlock Name="EveningAnounce" Text="Vous arrivez au soir du jour n°"/>
             <TextBlock Name="AllMissionsState" Text="Bilan de vos missions:"/>
 
@@ -51,7 +51,7 @@
                 <TextBlock Text="Vos Missions en cours:"/>
             </StackPanel>
 
-            <Button Click="BackToMainMenu" Content="Ok"/>
+            <Button Click="BackToMainMenu" Content="Ok" FontSize="20" Padding="20,6"/>
         </StackPanel>
     </ScrollViewer>
 
