--- a/Pol_Guymarc_Projet/MerchantObjectWindow.axaml
+++ b/Pol_Guymarc_Projet/MerchantObjectWindow.axaml
@@ -11,21 +11,35 @@
         <Window.Background>
                 <ImageBrush Source="avares://Pol_Guymarc_Projet/images/ObjectSelection.jpg" Stretch="UniformToFill"/>
         </Window.Background>
+        <Window.Styles>
+                <Style Selector="Button">
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="CornerRadius" Value="8"/>
+                        <Setter Property="FontFamily" Value="Segoe UI Semibold"/>
+                        <Setter Property="FontSize" Value="14"/>
+                        <Setter Property="Cursor" Value="Hand"/>
+                </Style>
+                <Style Selector="TextBlock">
+                        <Setter Property="FontSize" Value="18"/>
+                </Style>
+        </Window.Styles>
         
         <StackPanel Name="MainPanel">
                 <Button Click="BackToMainMerchant" Content="Retour"/>
+                <TextBlock Name="MoneyYouHave"/>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
                         <Button Name="GoLeft" Click="GoLeftToObject" Content="←" />
-                        <TextBlock Name="MoneyYouHave"/>
                         <StackPanel x:Name="SeeObject" Orientation="Vertical">
-                                <TextBlock x:Name="ObjectName"/>
-                                <Image x:Name="ObjectPicture" Height="50" Width="40"/>
-                                <TextBlock x:Name="ObjectType"/>
-                                <TextBlock x:Name="ObjectDescription"/>
-                                <TextBlock x:Name="ObjectBuyingPrice"/>
-                                <TextBlock x:Name="ObjectSellingPrice"/>
-                                <TextBlock x:Name="ObjectOther"/>
-                                <TextBlock x:Name="ObjectQuantity"/>
+                                <StackPanel HorizontalAlignment="Center">
+                                        <TextBlock x:Name="ObjectName" Padding="4,4,0,0"/>
+                                </StackPanel>
+                                <Image x:Name="ObjectPicture" Height="340" Width="280"/>
+                                <TextBlock x:Name="ObjectType" Padding="4"/>
+                                <TextBlock x:Name="ObjectDescription" Padding="4"/>
+                                <TextBlock x:Name="ObjectBuyingPrice" Padding="4"/>
+                                <TextBlock x:Name="ObjectSellingPrice" Padding="4"/>
+                                <TextBlock x:Name="ObjectOther" Padding="4"/>
+                                <TextBlock x:Name="ObjectQuantity" Padding="4,5,0,12"/>
                                 <Button Name="SelectingObject" Content="Acheter" Click="SelectingthisObject"/>
                                 <StackPanel Name="HowManyToBuy" IsVisible="false">
                                         <TextBlock>Quantité que vous souhaitez acheter: </TextBlock>
