--- a/Pol_Guymarc_Projet/ObjectToGiveSoldier.axaml
+++ b/Pol_Guymarc_Projet/ObjectToGiveSoldier.axaml
@@ -12,28 +12,47 @@
                 <ImageBrush Source="avares://Pol_Guymarc_Projet/images/ObjectSelection.jpg" Stretch="UniformToFill"/>
         </Window.Background>
         
+        <Window.Styles>
+                <Style Selector="Button">
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="CornerRadius" Value="8"/>
+                        <Setter Property="FontFamily" Value="Segoe UI Semibold"/>
+                        <Setter Property="FontSize" Value="16"/>
+                        <Setter Property="Cursor" Value="Hand"/>
+                </Style>
+                <Style Selector="TextBlock">
+                        <Setter Property="FontSize" Value="18"/>
+                </Style>
+        </Window.Styles>
+        
         <StackPanel Name="MainPanel">
                 <Button Click="BackToMainSoldier" Content="Retour"/>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
                         <Button Name="GoLeft" Click="GoLeftToObject" Content="←" />
                         <StackPanel x:Name="SeeObject" Orientation="Vertical">
-                                <TextBlock Name="TitleObjectToGive">Quel objet souhaitez-vous lui donner: </TextBlock>
-                                <TextBlock x:Name="ObjectName"/>
-                                <Image x:Name="ObjectPicture" Height="50" Width="40"/>
-                                <TextBlock x:Name="ObjectType"/>
-                                <TextBlock x:Name="ObjectDescription"/>
-                                <TextBlock x:Name="ObjectOther"/>
-                                <TextBlock x:Name="ObjectQuantity"/>
-                                <Button Name="GivingObject" Click="ValidateGivingObject" Content="Donner cet Objet">
-                                        <Button.Flyout>
-                                                <Flyout>
-                                                        <Border Background="#333" CornerRadius="5" Padding="10">
-                                                                <TextBlock Name="ValidateGivingObjectToSoldier"
-                                                                           Foreground="White"/>
-                                                        </Border>
-                                                </Flyout>
-                                        </Button.Flyout>
-                                </Button>       
+                                <StackPanel HorizontalAlignment="Center">
+                                        <TextBlock Name="TitleObjectToGive">Quel objet souhaitez-vous lui donner: </TextBlock>
+                                </StackPanel>
+                                <StackPanel HorizontalAlignment="Center">
+                                        <TextBlock x:Name="ObjectName" Padding="0,10"/>
+                                </StackPanel>
+                                <Image x:Name="ObjectPicture" Height="340" Width="280"/>
+                                <TextBlock x:Name="ObjectType" Padding="5"/>
+                                <TextBlock x:Name="ObjectDescription" Padding="5"/>
+                                <TextBlock x:Name="ObjectOther" Padding="5"/>
+                                <TextBlock x:Name="ObjectQuantity" Padding="5,0,0,15"/>
+                                <StackPanel HorizontalAlignment="Center">
+                                        <Button Name="GivingObject" Click="ValidateGivingObject" Content="Donner cet Objet">
+                                                <Button.Flyout>
+                                                        <Flyout>
+                                                                <Border Background="#333" CornerRadius="5" Padding="10">
+                                                                        <TextBlock Name="ValidateGivingObjectToSoldier"
+                                                                                        Foreground="White"/>
+                                                                </Border>
+                                                        </Flyout>
+                                                </Button.Flyout>
+                                        </Button> 
+                                </StackPanel>
                         </StackPanel> 
                         <Button Name="GoRight" Click="GoRightToObject" Content="→" />
                 </StackPanel>
